--- a/gb/22/10/27/n13854034.md
+++ b/gb/22/10/27/n13854034.md
@@ -15,7 +15,6 @@
 <figure id="attachment_12648434" aria-describedby="caption-attachment-12648434" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1452023039.jpg"><img class=" wp-image-12648434" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1452023039-450x300.jpg" alt="衣服" width="600" b="400" /></a><figcaption id="caption-attachment-12648434" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A1%A3%E6%9C%8D.md#1">衣服</a>太多是多数家庭面临的难题。整理的第一步就是清掉不会再穿的衣服。（图/Shutterstock）</figcaption></figure>
 <h3>旧习惯2：把所有东西都扔进衣橱</h3>
 <p>这是有记载的最古老的快速清洁技巧：在客人到来之前把所有东西都扔进衣橱。但这种方法实际上并不能帮你保持条理，也不会让你日后更容易找到物品。</p>
-<h3><span style="color: #993300;">建立新习惯：</span></h3>
 <p>如果你经常把东西堆在储藏室的地板上，可以遵循霍德利（Horderly）专业收纳师的建议，安装一个落地架。强迫你考虑哪些东西需要储存，然后在储物架上为它找一个家。</p>
 <h3>旧习惯3：把衣服堆在卧室的椅子上</h3>
 <p>在你结束漫长的一天且感到疲惫时，很容易把脏衣服扔到视野出现的第一个可用的地方。</p>
@@ -25,7 +24,6 @@
 <figure id="attachment_13740897" aria-describedby="caption-attachment-13740897" style="width: 598px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/05/id13740897-shutterstock_2005654940-e1652969117428.jpg"><img class=" wp-image-13740897" src="https://i.epochtimes.com/assets/uploads/2022/05/id13740897-shutterstock_2005654940-450x300.jpg" alt="整理房间" width="598" b="398" /></a><figcaption id="caption-attachment-13740897" class="wp-caption-text">竹篮可以装脏衣服或充当垃圾桶，还能美化卧室。(Shutterstock)</figcaption></figure>
 <h3>旧习惯4：家里到处都有鞋子</h3>
 <p>特别是如果你有孩子或是有个大家庭，可能已经习惯了家里到处乱扔的运动鞋、靴子和平底鞋。</p>
-<h3><span style="color: #993300;">建立新习惯：</span></h3>
 <p>在进门的通道或杂物间增加放鞋的空间，并养成进门脱鞋的习惯。找到适合你风格的鞋架，无论是简约的竹架，还是隐藏式的储物柜，都能让鞋子远离视线。</p>
 <figure id="attachment_11289588" aria-describedby="caption-attachment-11289588" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/05/20190530_shouhihsu_shutterstock_1286033104_101.jpg"><img class="size-medium wp-image-11289588" src="https://i.epochtimes.com/assets/uploads/2019/05/20190530_shouhihsu_shutterstock_1286033104_101-450x450.jpg" alt="衣柜" width="450" b="450" /></a><figcaption id="caption-attachment-11289588" class="wp-caption-text">购物太多家里的空间容纳不了。请采用一进一出的收纳黄金法则。（shutterstock）</figcaption></figure>
 <h3>旧习惯5：买回的东西太多放不下了</h3>
@@ -36,45 +34,37 @@
 <p><em>原文：<ahref="https://www.theepochtimes.com/5-habits-to-break-if-you-want-a-more-organized-home_4792286.md#1">5 Habits to Break If You Want a More Organized Home</a>刊登于英文《大纪元时报》。</em></p>
 <p>责任编辑：茉莉</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/1/n7481146.md#1">整洁的家更健康 老外这样整理家居</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/26/n13789597.md#1">事关健康与财运 家中这些地方一定要光亮整洁</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/19/n13828324.md#1">8个错误的清洁习惯 让你的家愈打扫愈脏</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/19/n13848397.md#1">【健康1+1】十大病因可导致便秘 七种饮食习惯需避免</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">共产暴政录：公私合营（工商改造）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/6/22/n11340254.md#1" target="_blank">林辉：抗共而逝的香港前主播让亲共港媒汗颜</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906403.md#1">因手术并发症濒死 男童一窥下辈子转生安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906615.md#1">【未解之谜】西方极乐世界游记（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906972.md#1">【时事人物】梅西：三代女人造就的一代球王</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898887.md#1">乱世一书生 怎能拥有安定一城的能量？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904409.md#1">郑愚山：供销社的“大爷”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13909555.md#1">【财商天下】中共再以GDP论英雄 地方政府面临两大危险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908665.md#1">【环球直击】中国再爆抢药潮 意黑手党头目落网</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908645.md#1">【晚间新闻】疫亡人数曝光 棺材裹尸袋每天千万订单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907853.md#1">体制内人士：地方财政枯竭 经济恢复不了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13907963.md#1">全国大量死人 北京开庆功会 学者斥丧尽天良</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13907918.md#1">【翻墙必看】中国因疫情已死亡4亿人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907796.md#1">谢莉斯去世细节曝光：因染疫入住呼吸科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908700.md#1">移民风波后首现身 冯小刚白癜风越来越严重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907833.md#1">周星驰在IG请粉丝许愿 一众艺人挤爆留言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907865.md#1">陈奕迅红馆终场演唱比爱心 18岁女儿感动洒泪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13908749.md#1">香港影评学会奖揭晓 郑秀文时隔22年再封后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906901.md#1">铝是神经毒素 危害大脑 如何防铝中毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900788.md#1">一天睡满8小时？最佳睡眠时间其实因人而异</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908155.md#1">有买房需求 一种方式立马降低利率！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907390.md#1">为何头发湿湿的不应该上床睡觉？ 专家释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13907983.md#1">【美食天堂】清蒸鱼做法～超级滑嫩无腥味</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136979.md#1">【环球直击】英美谴责港府通缉五港人 关切黎智英案</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136995.md#1">【中国禁闻】亲信旧部纷被抓 赵乐际遭围剿？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137862.md#1">【新闻看点】知情人揭北京地铁事件惊人内幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136734.md#1">中共党魁访越遭冷遇？ 央视不敢报</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135860.md#1">【菁英论坛】金融大崩溃 诸侯将崛起</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137649.md#1">周海媚去世前曾讲述一件诡异事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137438.md#1">自曝女儿个性像霍建华 林心如不愿她进演艺圈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135921.md#1">与周海媚合演《倚天屠龙记》 马景涛写信悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 亚马逊63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137700.md#1">土库曼斯坦“地狱之门” 烈火燃烧逾半世纪</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/27/n13854034.htm">懒人整理术 改掉这5个习惯 家里不再乱糟糟</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/27/n13854034.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
